--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "meet-raise-hand",
-  "displayName": "Meet raise hand",
+  "name": "sync-raise-a-hand",
+  "displayName": "Sync raise a hand",
   "version": "0.0.1",
   "description": "This is a Chrome extension that allows you to control the Raise button with real hand movements",
   "private": true,
