--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
     "build:js": "esbuild src/contentScripts/index.ts --bundle --minify --outfile=extension/dist/contentScripts/index.global.js",
     "clear": "rimraf extension/dist extension/manifest.json",
     "lint": "eslint '**/*.{json,ts,js,vue}'",
-    "build:package": "npm run build && bestzip extension.zip extension/*"
+    "build:package": "npm run build && bestzip extension.zip extension/*",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "handtrackjs": "^0.1.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.7.0",
+    "@commitlint/cli": "^13.1.0",
+    "@commitlint/config-conventional": "^13.1.0",
     "@iconify/json": "^1.1.390",
     "@types/chrome": "^0.0.154",
     "@types/fs-extra": "^9.0.12",
@@ -35,6 +41,7 @@
     "eslint": "^7.32.0",
     "esno": "^0.9.1",
     "fs-extra": "^10.0.0",
+    "husky": "^7.0.0",
     "kolorist": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -49,7 +56,18 @@
     "webext-bridge": "^4.0.1",
     "webextension-polyfill": "^0.8.0"
   },
-  "dependencies": {
-    "handtrackjs": "^0.1.5"
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
+    "rules": {
+      "type-enum": [
+        2,
+        "always",
+        [
+          "feat", "fix", "docs", "style", "refactor", "test", "revert", "BREAKING CHANGE", "chore"
+        ]
+      ]
+    }
   }
 }
