--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "kolorist": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "semantic-release": "^17.4.6",
     "typescript": "^4.3.5",
     "vite": "2.4.4",
     "vite-plugin-components": "^0.13.2",
@@ -65,9 +66,45 @@
         2,
         "always",
         [
-          "feat", "fix", "docs", "style", "refactor", "test", "revert", "BREAKING CHANGE", "chore"
+          "feat",
+          "fix",
+          "docs",
+          "style",
+          "refactor",
+          "test",
+          "revert",
+          "BREAKING CHANGE",
+          "chore"
         ]
       ]
     }
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      ["@semantic-release/release-notes-generator", {
+        "preset": "angular",
+        "presetConfig": {
+          "types": [
+            {
+              "type": "chore",
+              "section": "Chore"
+            },
+            {
+              "type": "refactor",
+              "section": "Refactor"
+            },
+            {
+              "type": "perf",
+              "section": "Performance"
+            }
+          ]
+        }
+      }],
+      "@semantic-release/github"
+    ],
+    "branches": [
+      "main"
+    ]
   }
 }
