chore: fix name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sync-raise-hand",
-  "displayName": "Sync raise hand",
+  "displayName": "Sync Raise hand",
   "version": "0.1.0",
   "description": "This is a Chrome extension that allows you to control the Raise button with real hand movements",
   "private": true,
